# sample-allotrope-as-a-service

./: .gitignore  .gitleaks.toml  .semgrepignore  ALLOTROPY-INTEGRATION.md  API-endpoints.txt  ARCHITECTURE-STATUS.md  ARCHITECTURE.md  ATaaS Service dashboard.txt  Allotrope-Data-Transformation-service.txt  Allotrope_as_a_service.json  CERTIFICATION-REPORT-FEATURE.md  CLAUDE.md  CONVERSION-EXPLANATION.md  CUSTOM-CONVERTER-ONBOARDING.md  CUSTOM-CONVERTER-REGISTRY.md  CUSTOMER-FILES-ANALYSIS.md  CUSTOMER-VALIDATION-ANALYSIS.md  DEMO-GUIDE.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT.md  DVAAS-FIX-SUMMARY.md  GIT-SETUP.md  HUMAN-IN-THE-LOOP-INTEGRATION.md  Human in the loop.txt  IMPLEMENTATION-SUMMARY.md  INSTRUMENT-MANIFEST-FILE-POV-REVISED.md  INSTRUMENT-REGISTRY-POV.md  LICENSE.md  MANIFEST-FILE-POV.md  MANIFEST-SCHEMA.md  MEMORY-010926.md  MEMORY-011726.md  MEMORY-012026.md  MEMORY-012126-2.md  MEMORY-012126.md  MEMORY-01272026.md  MEMORY-012826.md  MEMORY-020426.md  MEMORY-02192026.md  MEMORY-022526.md  (+123 more)
dashboard/: README.md  (+14 more)
services/: bundle_dvaas.py  cdk.json  deploy.bat  deploy_services.py  outputs.json  pyproject.toml  requirements.txt  simple_test.py  test_autonomous_services.py
services/ataas/: generate_converter.py  lambda_function.py  requirements.txt
services/custom-converter/: lambda_function.py
services/dvaas/: generate_certification_report.py  lambda_function.py  requirements.txt  rule_engine.py  validate_asm.py
services/dvaas-bundle/: generate_certification_report.py  lambda_function.py
services/multi-instrument/: lambda_function.py  requirements.txt
(+167 files in other folders)
