[project]
name = "asm-converter-infra"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.100.0",
    "aws-cdk.aws-lambda-python-alpha>=2.100.0a0",
    "constructs>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "boto3>=1.34",
    "moto[s3,dynamodb,sts]>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "-v"]
